app.js for root/index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>weather</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="js/app.js" defer></script>
+    <script src="./app.js" defer></script>
 
     
     </style>
@@ -35,7 +35,7 @@
     <div class="card">
         <div class="search">
             <input type="text" placeholder="enter city name" spellcheck="false">
-            <button onclick=""> generate</button>
+            <button>generate</button>
         </div>
         <div class="weather">
             <h1 class="temp">22°C</h1>
