styling srs.html

--- a/tour guide 2/srs.html
+++ b/tour guide 2/srs.html
@@ -13,6 +13,50 @@
         margin: 0;
         padding: 0;
       }
+
+      body {
+        padding: 0 1em 2em 2em;
+        display: grid;
+        gap: 0.7em;
+      }
+
+      h1,
+      h2 {
+        padding-bottom: 0.2em;
+        border-bottom: 1px solid black;
+      }
+
+      h1,
+      h2,
+      h3,
+      h4 {
+        font-family: cursive;
+      }
+
+      h1 {
+        text-align: center;
+      }
+
+      h2 {
+        margin-top: 1.2em;
+      }
+
+      h2::first-letter {
+        color: white;
+        background-color: rgb(100, 59, 249);
+
+        font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+
+        margin-right: 0.2rem;
+        padding: 0.025em 0.2em 0.025em 0.2em;
+
+        border: 1px solid black;
+        border-radius: 50%;
+      }
+
+      ul {
+        margin-left: 1.5em;
+      }
     </style>
   </head>
   <body>
